# chanta

./: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  configure  configure.in
doc/: Makefile.am  Makefile.in  como_funciona  dd.html  estilo.html
src/: Actor.cpp  Actor.h  Animacion.cpp  Animacion.h  Cadena.cpp  Cadena.h  Camara.cpp  Camara.h  Controles.cpp  Controles.h  Cursor.cpp  Cursor.h  Doxyfile  Editor.cpp  Editor.h  Enemigo.cpp  Enemigo.h  Escena.cpp  Escena.h  Fuente.cpp  Fuente.h  Galeria.cpp  Galeria.h  Imagen.cpp  Imagen.h  Item.cpp  Item.h  Juego.cpp  Juego.h  Makefile.am  Makefile.in  Makefile.mingw  Menu.cpp  Menu.h  Mundo.cpp  Mundo.h  Nivel.cpp  Nivel.h  Procesos.cpp  Procesos.h  (+6 more)
src/data/: Makefile.am  Makefile.in
src/ima/: Makefile.am  Makefile.in
